--- a/package.json
+++ b/package.json
@@ -9,8 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next-auth/prisma-adapter": "^1.0.7",
+    "@prisma/client": "^5.17.0",
+    "@types/bcrypt": "^5.0.2",
     "axios": "^1.7.2",
+    "bcrypt": "^5.1.1",
     "next": "14.2.5",
+    "next-auth": "^4.24.7",
+    "prisma": "^5.17.0",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.52.1",
